--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
 <body>
     <header>
         <nav>
-            <a href="{% url 'blog:home' %}">ホーム</a>
+            <a href="/">Home</a>
+            <a href="{% url 'blog:blog_home' %}">Blog</a>
         </nav>
     </header>
 
