--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
     <header>
         <nav>
             <a href="/">Home</a>
+            <a href="{% url 'about:about' %}">About</a>
             <a href="{% url 'blog:blog_home' %}">Blog</a>
+            <a href="{% url 'gallery:gallery' %}">Gallery</a>
         </nav>
     </header>
 
