--- a/dashboard/templates/dashboard/login.html
+++ b/dashboard/templates/dashboard/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'admin_base.html' %}
 
 {% block content %}
 <div class="container mt-5">
@@ -17,8 +17,8 @@
                         </div>
                     </form>
                     <!-- <div class="mt-3 text-center">
-                        <p>アカウントをお持ちでない方は<a href="{% url 'accounts:signup' %}">こちら</a></p>
-                        <p>パスワードをお忘れの方は<a href="{% url 'accounts:password_reset' %}">こちら</a></p>
+                        <p>アカウントをお持ちでない方は<a href="{% url 'dashboard:signup' %}">こちら</a></p>
+                        <p>パスワードをお忘れの方は<a href="{% url 'dashboard:password_reset' %}">こちら</a></p>
                     </div> -->
                 </div>
             </div>
