--- a/home/static/css/home.css
+++ b/home/static/css/home.css
@@ -8,11 +8,11 @@
     height: 100%;
 }
 
-.top_view{
+.home_container_inner{
     width: 31.2%;
 }
 
-.top_view_h1{
+.home_container_h1{
     width: 100%;
 
     font-family: "Zen Maru Gothic", serif;
