--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<div class="home_container zen-maru-gothic-light">
-    <div class="top_view">
-        <h1 class="top_view_h1">
+<section class="home_container zen-maru-gothic-light">
+    <div class="home_container_inner">
+        <h1 class="home_container_h1">
             <span>まちだ　はやと</span><span class="last_spacing">の</span>
             <span class="h1_margin">ポートフォリオ</span>
         </h1>
@@ -19,5 +19,5 @@
             </div>
         </div>
     </div>
-</div>
+</section>
 {% endblock %}
